[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "fastapi>=0.135.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "slowapi>=0.1.9",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
